Closed Bug 1202533 Opened 9 years ago Closed 9 years ago

Fix naming convention of MediaSink::PlaybackParams

Categories

(Core :: Audio/Video: Playback, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla43
Tracking Status
firefox43 --- fixed

People

(Reporter: jwwang, Assigned: jwwang)

References

Details

Attachments

(1 file)

Assignee: nobody → jwwang
Depends on: 1199155
Fix naming.
Attachment #8657996 - Flags: review?(gsquelart)
Attachment #8657996 - Flags: review?(gsquelart) → review+
Thanks for the review!
https://hg.mozilla.org/mozilla-central/rev/1e8a4d53837f
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: