Bug 1202533 - Fix naming convention of MediaSink::PlaybackParams.